--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "src/jtag/drivers/libjaylink"]
 	path = src/jtag/drivers/libjaylink
 	url = https://github.com/syntacore/libjaylink.git
+[submodule "jimtcl"]
+	path = jimtcl
+	url = https://github.com/msteveb/jimtcl.git
