fix jimtcl detection script

--- a/configure.ac
+++ b/configure.ac
@@ -785,7 +785,7 @@ else
 fi
 
 if test $use_internal_jimtcl = yes; then
-  if test -f "$srcdir/jimtcl/configure.ac"; then
+  if test -f "$srcdir/jimtcl/configure"; then
     AX_CONFIG_SUBDIR_OPTION([jimtcl], [--disable-install-jim])
   else
     AC_MSG_ERROR([jimtcl not found, run git submodule init and git submodule update.])
